--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <form class="form-inline my-2 d-flex w-5">
+    <h2>You can search here</h2>
     <input class="form-control mr-sm-2" name="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 
